<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="2dp">

        <Button
            android:id="@+id/learn_letter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/learn_icon"
            android:text="@string/learn"
            android:textAllCaps="true" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />


        <Button
            android:id="@+id/write_letter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/write_icon"
            android:text="@string/write"
            android:textAllCaps="true" />


        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />


        <Button
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/test_icon"
            android:text="@string/test"
            android:textAllCaps="true" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/help_icon"
            android:text="@string/help"
            android:textAllCaps="true" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <GridView
            android:id="@+id/gridview1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:columnWidth="@dimen/image_width_gridview"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth" />
    </LinearLayout>

</LinearLayout>