<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomGesturesActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:id="@+id/view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttonll"
        android:layout_below="@+id/view">

        <Button
            android:id="@+id/goto_page_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/goto_icon"
            android:text="@string/go_to_page"
            android:textAllCaps="true" />


        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />


        <Button
            android:id="@+id/repeat_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/repeat_icon"
            android:text="@string/repeat"
            android:textAllCaps="true" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/blue" />

        <Button
            android:id="@+id/help_write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/help_icon"
            android:text="@string/help"
            android:textAllCaps="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_below="@+id/buttonll"
        android:id="@+id/viewll"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/relativeslider"
        android:layout_below="@+id/viewll"
        >

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:id="@+id/leftslide"
            android:src="@drawable/left"
            />
        <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/writeletterpager"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/leftslide"
            android:layout_toEndOf="@+id/leftslide"></android.support.v4.view.ViewPager>

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:id="@+id/rightslide"
            android:src="@drawable/right"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/writeletterpager"
            android:layout_alignEnd="@+id/writeletterpager" />
    </RelativeLayout>

    <android.gesture.GestureOverlayView
        android:id="@+id/gOverlay"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gestureColor="#cccccc"
        android:gestureStrokeType="multiple"
        android:uncertainGestureColor="@color/red"
        android:layout_below="@+id/relativeslider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">
    </android.gesture.GestureOverlayView>

</RelativeLayout>